Fix for empty columns collapsing in V7

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -31,7 +31,6 @@
 }
 
 
-.empty-zone,
 #page-zones__main:empty {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -53,7 +52,14 @@
     width: 90%;
 }
 
+.edit #page-zones__main-overlay.empty-zone {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    min-height: 40px;
+    position: relative;
+}
 
+.edit #page-zones__main-overlay + .widget:not(.row),
 #page-zones__main > .widget:not(.row):first-child,
 #page-zones__main > .row + .widget:not(.row) {
     margin-top: 40px;
@@ -62,10 +68,8 @@
         margin-top: 20px;
     }
 }
-
-
-#page-zones__main > .widget:not(.row):last-child,
-#page-zones__main > .row + .widget:not(.row) {
+ 
+#page-zones__main > .widget:not(.row):last-child {
     margin-bottom: 40px;
     
     @media @tablet {
